另一台电脑拉取

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 01 16:48:36 SGT 2022
-sdk.dir=C\:\\Users\\71464\\AppData\\Local\\Android\\Sdk
+#Fri Dec 02 18:34:02 CST 2022
+sdk.dir=C\:\\Users\\ROG\\AppData\\Local\\Android\\Sdk
