--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Dec 02 18:34:02 CST 2022
-sdk.dir=C\:\\Users\\ROG\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\71464\\AppData\\Local\\Android\\Sdk
+
