--- a/local.properties
+++ b/local.properties
@@ -1,9 +1,8 @@
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
-#3
+#
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 02 18:34:02 CST 2022
-sdk.dir=C\:\\Users\\71464\\AppData\\Local\\Android\\Sdk
-
+#Mon Dec 05 17:19:22 GMT+08:00 2022
+sdk.dir=C\:\\Users\\wxl12\\AppData\\Local\\Android\\Sdk
