--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,26 @@
         android:theme="@style/Theme.GroupProject"
         tools:targetApi="31">
         <activity
-            android:name=".reset_password"
+            android:name=".chronic_search"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <!-- permissions for internet -->
+        <activity
+            android:name=".chronic_detail"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".reset_password"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity> <!-- permissions for internet -->
         <activity
             android:name=".Chat"
             android:exported="true">
